Изменения какие-то.

--- a/SintezWpfUiLib/View/UserControl1.xaml
+++ b/SintezWpfUiLib/View/UserControl1.xaml
@@ -1,151 +1,15 @@
-﻿<UserControl
-    x:Class="SintezWpfUiLib.View.ChatView"
-    x:Name="UC"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-    xmlns:local="clr-namespace:SintezWpfUiLib"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:MD="http://materialdesigninxaml.net/winfx/xaml/themes"
-    xmlns:vm="clr-namespace:SintezWpfUiLib.ViewModel"
-    Height="567"
-    MaxWidth="850"
-    mc:Ignorable="d"
-    Background="{DynamicResource MaterialDesignPaper}"
-    d:DesignWidth="800"
-    FontFamily="{DynamicResource MaterialDesignFont}"
-    Padding="0,0,20,0"
-    TextElement.FontSize="13"
-    TextElement.FontWeight="Regular"
-    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-    TextOptions.TextFormattingMode="Ideal"
-    TextOptions.TextRenderingMode="Auto">
-
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="..\MaterialDesignDictionary.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-            <Style
-                x:Key="roundButton1"
-                BasedOn="{StaticResource MaterialDesignFloatingActionMiniButton}"
-                TargetType="Button">
-                <Style.Triggers>
-                    <DataTrigger Value="Visible" Binding="{Binding ElementName=searchChat, Path=Visibility}">
-                        <Setter Property="IsEnabled" Value="False" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <Style
-                x:Key="DisignButton"
-                BasedOn="{StaticResource MaterialDesignToolForegroundButton}"
-                TargetType="Button">
-                <Style.Triggers>
-                    <DataTrigger Value="0" Binding="{Binding Path = doc_id}">
-                        <Setter Property="Visibility" Value="Collapsed" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <Style
-                x:Key="IssueButton"
-                BasedOn="{StaticResource MaterialDesignToolForegroundButton}"
-                TargetType="Button">
-                <Style.Triggers>
-                    <DataTrigger Value="0" Binding="{Binding Path = goal_id}">
-                        <Setter Property="Visibility" Value="Collapsed" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <Style
-                x:Key="FileButton"
-                BasedOn="{StaticResource MaterialDesignToolForegroundButton}"
-                TargetType="Button">
-                <Style.Triggers>
-                    <DataTrigger Value="" Binding="{Binding Path = filename}">
-                        <Setter Property="Visibility" Value="Collapsed" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <Style
-                x:Key="DelFile"
-                BasedOn="{StaticResource MaterialDesignFlatToggleButton}"
-                TargetType="ToggleButton">
-                <Style.Triggers>
-                    <DataTrigger Value="" Binding="{Binding Path = LoadingFileName}">
-                        <Setter Property="Visibility" Value="Collapsed" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <Style
-                x:Key="DelDesign"
-                BasedOn="{StaticResource MaterialDesignFlatToggleButton}"
-                TargetType="ToggleButton">
-                <Style.Triggers>
-                    <DataTrigger Value="{x:Null}" Binding="{Binding Path = AttachedDesign}">
-                        <Setter Property="Visibility" Value="Collapsed" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <Style x:Key="MessageBorder" TargetType="Border">
-                <Style.Triggers>
-                    <DataTrigger Value="False" Binding="{Binding Path=fromCurrentManagersMsg}">
-                        <Setter Property="Margin" Value="5 3 50 3" />
-                        <Setter Property="Background" Value="Aqua" />
-                    </DataTrigger>
-                    <DataTrigger Value="True" Binding="{Binding Path=fromCurrentManagersMsg}">
-                        <Setter Property="Margin" Value="100 3 5 3" />
-                        <Setter Property="Background" Value="LightGray" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <Style x:Key="NotReadMessagesCount" TargetType="Label">
-                <Style.Triggers>
-                    <DataTrigger Value="0" Binding="{Binding Path=CountNotReadedMessages}">
-                        <Setter Property="Visibility" Value="Collapsed" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <Style x:Key="Attent" TargetType="MD:PackIcon">
-                <Style.Triggers>
-                    <DataTrigger Value="False" Binding="{Binding Path=attention}">
-                        <Setter Property="Visibility" Value="Collapsed" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-            <DataTemplate>
-                <StackPanel Orientation="Horizontal">
-                    <MD:PackIcon VerticalAlignment="Center" Kind="Account" />
-                    <TextBlock VerticalAlignment="Center">
-                        <Label Content="{Binding login}" />
-                        <Label
-                            Content="{Binding CountNotReadedMessages}"
-                            FontWeight="Bold"
-                            Foreground="Red"
-                            Style="{DynamicResource NotReadMessagesCount}" />
-                    </TextBlock>
-                </StackPanel>
-            </DataTemplate>
-            <DataTemplate>
-                <StackPanel Orientation="Horizontal">
-                    <MD:PackIcon Kind="FileDocumentBoxMultipleOutline" />
-                    <TextBlock Text="{Binding goal}" />
-                </StackPanel>
-            </DataTemplate>
-            <DataTemplate>
-                <StackPanel Orientation="Horizontal">
-                    <MD:PackIcon Kind="FileDocumentOutline" />
-                    <TextBlock Text="{Binding Number}" />
-                </StackPanel>
-            </DataTemplate>
-        </ResourceDictionary>
-    </UserControl.Resources>
+﻿<UserControl x:Class="SintezWpfUiLib.View.UserControl1"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:SintezWpfUiLib.View"
+             xmlns:MD="http://materialdesigninxaml.net/winfx/xaml/themes"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
 
     <!-- Привязка к модели представления -->
 
-    <UserControl.DataContext>
-        <vm:ChatViewModel />
-    </UserControl.DataContext>
 
     <Grid FocusManager.FocusedElement="{Binding ElementName=tbxEnterMessage}" Name="bsGrid">
         <!--<Grid.ColumnDefinitions>
