--- a/BogdanovCodeAnalyzer/View/MainWindowView.xaml
+++ b/BogdanovCodeAnalyzer/View/MainWindowView.xaml
@@ -26,6 +26,13 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <Button Command="{Binding CreateLogsInCodeCommand}" Content="Обложить код логами" HorizontalAlignment="Left" Margin="542,67,0,0" VerticalAlignment="Top" Width="240"/>
+        <TextBox Text="{Binding PathToAnalyzeFiles, Mode=TwoWay}" HorizontalAlignment="Left" Height="23" Margin="447,3,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="335"/>
+        <Label Content="Путь к файлам:" HorizontalAlignment="Left" Margin="349,0,0,0" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="442,92,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="305" Width="319"
+                   Text="{Binding TextInTextBlock, Mode=TwoWay}"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="601,31,0,0" TextWrapping="Wrap" Text="{Binding TextAddedNamespase, Mode=TwoWay}" VerticalAlignment="Top" Width="181"/>
+        <Label Content="Добавляемое пространство имён" HorizontalAlignment="Left" Margin="400,28,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
