--- a/BogdanovCodeAnalyzer/View/MainWindowView.xaml
+++ b/BogdanovCodeAnalyzer/View/MainWindowView.xaml
@@ -11,28 +11,105 @@
         <vm:MainWindowViewModel/>
     </Window.DataContext>
     <Grid>
+        <TabControl  Margin="5" >
+            <TabItem Header="Сервер">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="22"/>
+                        <RowDefinition Height="25"/>
+                        <RowDefinition Height="320*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="451*"/>
+                        <ColumnDefinition Width="325*"/>
+                    </Grid.ColumnDefinitions>
+                    <ListBox Margin="2"
+                 ItemsSource="{Binding Messages}" Grid.Row="2">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBox Text="{Binding Tag}"/>
+                                    <TextBox Text="{Binding LogMessage}"/>
+                                    <TextBox Text="{Binding Method}"/>
+                                    <TextBox Text="{Binding File}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    <Button Content="{Binding TaskToOpenOrCloseServer, Mode=TwoWay}" Command="{Binding StartStopServerCommand}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="202"/>
+                    <Label Content="Сообщения от клиента:" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Поддержка логгирования">
+                <TabControl>
+                    <TabItem Header="Покрытие логами кода">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="460"/>
+                                <ColumnDefinition Width="153*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="30"/>
+                                <RowDefinition Height="30"/>
+                                <RowDefinition Height="25"/>
+                                <RowDefinition Height="221*"/>
+                            </Grid.RowDefinitions>
+                            <Label Content="Путь к файлам:" HorizontalAlignment="Left" Margin="2,2,0,0" VerticalAlignment="Top"/>
+                            <TextBox Text="{Binding PathToAnalyzeFiles, Mode=TwoWay}" HorizontalAlignment="Left" Height="23" Margin="120,2,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="335"/>
+                            <Label Content="Добавляемое пространство имён:" HorizontalAlignment="Left" Margin="2,2,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+                            <TextBox HorizontalAlignment="Left" Height="23" Margin="210,2,0,0" TextWrapping="Wrap" Text="{Binding TextAddedNamespase, Mode=TwoWay}" VerticalAlignment="Top" Width="245" Grid.Row="1"/>
+                            <Button Command="{Binding CreateLogsInCodeCommand}" Content="Обложить код логами" HorizontalAlignment="Left" Margin="2,2,0,0" VerticalAlignment="Top" Width="240" Grid.Row="2"/>
+                            <TextBlock Background="AliceBlue" Margin="3" TextWrapping="Wrap"
+                   Text="{Binding TextInTextBlock, Mode=TwoWay}" Grid.Row="3"/>
+                        </Grid>
+                    </TabItem>
+                    <TabItem Header="Анализ лога">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="700"/>
+                                <ColumnDefinition Width="29*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="200"/>
+                                <RowDefinition Height="274*"/>
+                            </Grid.RowDefinitions>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="27*"/>
+                                    <RowDefinition Height="73*"/>
+                                </Grid.RowDefinitions>
+                                <Label Content="Путь к файлу лога:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                                <TextBox 
+                                    Text="{Binding LogFilesPath, Mode=TwoWay}" 
+                                    HorizontalAlignment="Left" Height="23" Margin="126,13,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400"/>
+                                <Button 
+                                    Command="{Binding SearchFrequencyLogsCommand}" 
+                                    Content="Провести анализ файла" 
+                                    HorizontalAlignment="Left" Margin="531,13,0,0" VerticalAlignment="Top" Width="159" Height="23"/>
+                                <RadioButton 
+                                    IsChecked="{Binding IsFrequenceRepeatStrings, Mode=TwoWay}"
+                                    Content="Частотность совпадения строк" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+                                <RadioButton 
+                                    IsChecked="{Binding IsFrequenceRepeatFiles, Mode=TwoWay}"
+                                    Content="Частотность обращения к методам файла" HorizontalAlignment="Left" Margin="10,30,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+                                
 
-        <Button Content="{Binding TaskToOpenOrCloseServer, Mode=TwoWay}" Command="{Binding StartStopServerCommand}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="202"/>
-        <ListBox HorizontalAlignment="Left" Height="374" Margin="10,35,0,0" VerticalAlignment="Top" Width="385"
-                 ItemsSource="{Binding Messages}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBox Text="{Binding Tag}"/>
-                        <TextBox Text="{Binding LogMessage}"/>
-                        <TextBox Text="{Binding Method}"/>
-                        <TextBox Text="{Binding File}"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <Button Command="{Binding CreateLogsInCodeCommand}" Content="Обложить код логами" HorizontalAlignment="Left" Margin="542,67,0,0" VerticalAlignment="Top" Width="240"/>
-        <TextBox Text="{Binding PathToAnalyzeFiles, Mode=TwoWay}" HorizontalAlignment="Left" Height="23" Margin="447,3,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="335"/>
-        <Label Content="Путь к файлам:" HorizontalAlignment="Left" Margin="349,0,0,0" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="442,92,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="305" Width="319"
-                   Text="{Binding TextInTextBlock, Mode=TwoWay}"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="601,31,0,0" TextWrapping="Wrap" Text="{Binding TextAddedNamespase, Mode=TwoWay}" VerticalAlignment="Top" Width="181"/>
-        <Label Content="Добавляемое пространство имён" HorizontalAlignment="Left" Margin="400,28,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <ListBox Grid.Row="1" ItemsSource="{Binding Logs}">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBox Text="{Binding MsgLog}"/>
+                                            <TextBox Text="{Binding Count}"/>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+                            </ListBox>
+                        </Grid>
+                    </TabItem>
+                </TabControl>
+            </TabItem>
+        </TabControl>
 
     </Grid>
 </Window>
