--- a/BogdanovCodeAnalyzer/View/MainWindowView.xaml
+++ b/BogdanovCodeAnalyzer/View/MainWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BogdanovCodeAnalyzer.MainWindowView"
+﻿<Window xmlns:View="clr-namespace:BogdanovCodeAnalyzer.View"  x:Class="BogdanovCodeAnalyzer.MainWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -111,35 +111,11 @@
             </TabItem>
 
             <TabItem Header="Работа с БД T-SQL">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="44*"/>
-                        <RowDefinition Height="237*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="57*"/>
-                        <ColumnDefinition Width="137*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Content="Строка подключения к БД"/>
-                    <TextBox Height="23" TextWrapping="Wrap" Text="{Binding ConnectionToDBStr, Mode=TwoWay}" Grid.Column="1"/>
-                    <TextBox Height="23" TextWrapping="Wrap" Text="{Binding ValueToSearchInDbTabs, Mode=TwoWay}" Grid.Column="1" Grid.Row="1"/>
-                    <Label Content="Значение, которое ищется в БД" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Width="201" Grid.Row="1"/>
-                    <Button Content="Button" Command="{Binding SearchValuesInFieldsDbCommand, Mode=TwoWay}" Grid.Row="2"/>
-                    <DataGrid ItemsSource="{Binding DV, Mode=TwoWay}" Grid.Column="1" Grid.Row="3" Margin="5">
-
-                    </DataGrid>
-                    <ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Connections}">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel>
-                                    <CheckBox Grid.Row="3" Content="{Binding ConnectionString, Mode=TwoWay}" IsChecked="{Binding IsChecked}"></CheckBox>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </Grid>
+                <View:AnalyzeSqlDbView>
+                    <View:AnalyzeSqlDbView.DataContext>
+                        <vm:AnalyzeSqlDbViewModel/>
+                    </View:AnalyzeSqlDbView.DataContext>
+                </View:AnalyzeSqlDbView>
             </TabItem>
         </TabControl>
 
