--- a/BogdanovCodeAnalyzer/View/MainWindowView.xaml
+++ b/BogdanovCodeAnalyzer/View/MainWindowView.xaml
@@ -14,56 +14,15 @@
         <TabControl  Margin="5">
             <TabItem Header="Сервер">
                 <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="22"/>
-                        <RowDefinition Height="25"/>
-                        <RowDefinition Height="320*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="451*"/>
-                        <ColumnDefinition Width="325*"/>
-                    </Grid.ColumnDefinitions>
-                    <ListBox Margin="2"
-                 ItemsSource="{Binding Messages}" Grid.Row="2">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBox Text="{Binding Tag}"/>
-                                    <TextBox Text="{Binding LogMessage}"/>
-                                    <TextBox Text="{Binding Method}"/>
-                                    <TextBox Text="{Binding File}"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                    <Button Content="{Binding TaskToOpenOrCloseServer, Mode=TwoWay}" Command="{Binding StartStopServerCommand}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="202"/>
-                    <Button Content="{Binding LogsRec, Mode=TwoWay}" Command="{Binding StartStopRecLogsCommand}" Margin="240, 0,0,0" Width="202"/>
-                    <Label Content="Сообщения от клиента:" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top"/>
+                    <View:RemotingProgramsLogsView>
+                        <View:RemotingProgramsLogsView.DataContext>
+                            <vm:RemotingProgramsLogsViewModel/>
+                        </View:RemotingProgramsLogsView.DataContext>
+                    </View:RemotingProgramsLogsView>
                 </Grid>
             </TabItem>
             <TabItem Header="Поддержка логгирования">
                 <TabControl>
-                    <TabItem Header="Покрытие логами кода">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="460"/>
-                                <ColumnDefinition Width="153*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="30"/>
-                                <RowDefinition Height="30"/>
-                                <RowDefinition Height="25"/>
-                                <RowDefinition Height="221*"/>
-                            </Grid.RowDefinitions>
-                            <Label Content="Путь к файлам:" HorizontalAlignment="Left" Margin="2,2,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding PathToAnalyzeFiles, Mode=TwoWay}" HorizontalAlignment="Left" Height="23" Margin="120,2,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="335"/>
-                            <Label Content="Добавляемое пространство имён:" HorizontalAlignment="Left" Margin="2,2,0,0" VerticalAlignment="Top" Grid.Row="1"/>
-                            <TextBox HorizontalAlignment="Left" Height="23" Margin="210,2,0,0" TextWrapping="Wrap" Text="{Binding TextAddedNamespase, Mode=TwoWay}" VerticalAlignment="Top" Width="245" Grid.Row="1"/>
-                            <Button Command="{Binding CreateLogsInCodeCommand}" Content="Обложить код логами" HorizontalAlignment="Left" Margin="2,2,0,0" VerticalAlignment="Top" Width="240" Grid.Row="2"/>
-                            <TextBlock Background="AliceBlue" Margin="3" TextWrapping="Wrap"
-                   Text="{Binding TextInTextBlock, Mode=TwoWay}" Grid.Row="3"/>
-                        </Grid>
-                    </TabItem>
                     <TabItem Header="Покрытие лога">
                         <View:CoverCodeView>
                             
