--- a/BogdanovCodeAnalyzer.Client/MainWindow.xaml
+++ b/BogdanovCodeAnalyzer.Client/MainWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="Отправить сообщение лога" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="250" Click="Button_Click"/>
+        <Button Content="Отправить уведомление о подключении" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top" Width="250" Click="Button_Click_1"/>
+        <Button Content="Отправить уведомление об отключении" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" Width="250"/>
 
     </Grid>
 </Window>
