--- a/BogdanovCodeAnalyzer/View/AnalyzeSqlDbView.xaml
+++ b/BogdanovCodeAnalyzer/View/AnalyzeSqlDbView.xaml
@@ -17,6 +17,7 @@
             <RowDefinition Height="150"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Label Content="Список строк подключения:" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1"/>
@@ -31,10 +32,31 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <TextBox Height="23" TextWrapping="Wrap" Text="{Binding ValueToSearchInDbTabs, Mode=TwoWay}" Grid.Column="1" Grid.Row="2" Margin="5,3"/>
-        <DataGrid ItemsSource="{Binding DV, Mode=TwoWay}" Grid.Column="1" Grid.Row="4" Margin="5" Grid.ColumnSpan="2"/>
-        <Button Content="Поиск" Command="{Binding SearchValuesInFieldsDbCommand, Mode=TwoWay}" Grid.Row="2" Grid.Column="2" Margin="5, 4"/>
+
+        <Button Content="Поиск" IsEnabled="{Binding SearchIsEnabled, Mode=TwoWay}" Command="{Binding SearchValuesInFieldsDbCommand, Mode=TwoWay}" Grid.Row="2" Grid.Column="2" Margin="5, 4"/>
         <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="5,7,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="460"/>
         <Button Content="Поиск колонок" Command="{Binding SearchValuesInColumnsDbCommand, Mode=TwoWay}" Grid.Column="2" HorizontalAlignment="Left" Margin="5,7,0,0" Grid.Row="3" VerticalAlignment="Top" Width="140"/>
         <Button Content="Поиск таблиц" Command="{Binding SearchValuesInTablesDbCommand, Mode=TwoWay}" HorizontalAlignment="Left" Margin="10,7,0,0" Grid.Row="3" VerticalAlignment="Top" Width="170"/>
+        <CheckBox x:Name="checkBox" IsChecked="{Binding SearchAsString, Mode=TwoWay}" Content="Как строку исследовать" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="4" VerticalAlignment="Top"/>
+
+
+        <Grid Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="269*"/>
+                <ColumnDefinition Width="531*"/>
+            </Grid.ColumnDefinitions>
+
+            <ListBox Grid.Column="0" ItemsSource="{Binding Exceptions}" Margin="5" >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBox Grid.Row="3" Text="{Binding Message}"></TextBox>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <DataGrid ItemsSource="{Binding DV, Mode=TwoWay}" Grid.Column="1" Margin="5" />
+        </Grid>
+
     </Grid>
 </UserControl>
