--- a/MVVMUtilsWrapper.Demo/View/MainWindow.xaml
+++ b/MVVMUtilsWrapper.Demo/View/MainWindow.xaml
@@ -45,5 +45,9 @@
             Content="Демонстрация передачи данных пользовательскими контролам" 
             HorizontalAlignment="Left" Margin="10,110,0,0" VerticalAlignment="Top" Width="370"
             Command="{Binding RelateWithUCCommand}"/>
+        <Button 
+            Content="Демонстрация пользовательских настроек контролов" 
+            HorizontalAlignment="Left" Margin="10,135,0,0" VerticalAlignment="Top" Width="370"
+            Command="{Binding CustomControlsCommand}"/>
     </Grid>
 </Window>
