--- a/SqlAnalyzer/Views/Forms/SearchColumnsView.xaml
+++ b/SqlAnalyzer/Views/Forms/SearchColumnsView.xaml
@@ -20,59 +20,9 @@
         <Button Content="Поиск колонок" HorizontalAlignment="Left" Margin="580,13,0,0" VerticalAlignment="Top" Width="175" Height="23"
                 Command="{Binding SearchingColumnsCommand}"
                 IsEnabled="{Binding !IsSearchingNow}"/>
-        <DataGrid HorizontalAlignment="Left" Height="255" Margin="10,74,0,0" VerticalAlignment="Top" Width="565"
-                 ItemsSource="{Binding Columns}" AutoGenerateColumns="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="База данных" Binding="{Binding TABLE_CATALOG}"/>
-                <DataGridTextColumn Header="Таблица" Binding="{Binding TABLE_NAME}"/>
-                <DataGridTextColumn Header="Колонка" Binding="{Binding COLUMN_NAME}"/>
-                <DataGridTextColumn Header="Тип" Binding="{Binding DATA_TYPE}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        <DataGrid HorizontalAlignment="Left" Height="255" Margin="580,74,0,0" VerticalAlignment="Top" Width="570"
-                  ItemsSource="{Binding ColumnsView}">
-            <DataGrid.GroupStyle>
-                <GroupStyle>
-                    <GroupStyle.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBox Text="{Binding COLUMN_NAME}"/>
-                        </DataTemplate>
-                    </GroupStyle.HeaderTemplate>
-                    <GroupStyle.ContainerStyle>
-                        <Style TargetType="{x:Type GroupItem}">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate>
-                                        <Expander>
-                                            <Expander.Header>
-
-                                                <StackPanel Orientation="Horizontal">
-                                                    <TextBlock Text="{Binding COLUMN_NAME}"/>
-                                                    <TextBlock Text="{Binding ItemCount}"/>
-                                                </StackPanel>
-                                            </Expander.Header>
-                                            <Expander.Content>
-                                                <ItemsPresenter/>
-                                            </Expander.Content>
-                                        </Expander>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </GroupStyle.ContainerStyle>
-                </GroupStyle>
-            </DataGrid.GroupStyle>
-        </DataGrid>
-        <Button Content="Обновить список" Command="{Binding UpdataCommand}" HorizontalAlignment="Left" Margin="760,16,0,0" VerticalAlignment="Top" Width="200"/>
-        <DataGrid HorizontalAlignment="Left" Height="275" Margin="10,334,0,0" VerticalAlignment="Top" Width="565"
-                  ItemsSource="{Binding ColumnFilter1}"
-                  SelectedItem="{Binding SelectedItemColumnFilter1}"/>
-        <Button Content="Посчитать количество колонок" HorizontalAlignment="Left" 
-                Margin="965,16,0,0" VerticalAlignment="Top" Width="220"
-                Command="{Binding ColumnsCountCommand}"/>
-        <DataGrid HorizontalAlignment="Left" Height="275" Margin="580,334,0,0" VerticalAlignment="Top" Width="570"
-                  ItemsSource="{Binding ColumnFilter2}"
-                  SelectedItem="{Binding SelectedItemColumnFilter2}"/>
+        <DataGrid HorizontalAlignment="Left" Height="445" Margin="515,105,0,0" VerticalAlignment="Top" Width="570"
+                  ItemsSource="{Binding ColumnDetails}"
+                  SelectedItem="{Binding SelectedItemColumnDetails}"/>
         <Button Content="Пример записи колонки в таблице" HorizontalAlignment="Left" 
                 Margin="10,614,0,0" VerticalAlignment="Top" Width="220"
                 Command="{Binding ColumnSampleInTableCommand}"/>
@@ -82,6 +32,33 @@
                   ItemsSource="{Binding Samples}"/>
         <Button Content="Пример всех записей одинаковой колонки" HorizontalAlignment="Left" Margin="235,614,0,0" VerticalAlignment="Top" Width="275"
                 Command="{Binding AllColumnSamplesInTablesCommand}"/>
+        <TabControl HorizontalAlignment="Left" Height="476" Margin="10,74,0,0" VerticalAlignment="Top" Width="494">
+            <TabItem Header="Колонки по частоте" 
+                     ToolTip="В данной вкладке дан список всех колонок на сервере БД с количеством упоминаний">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid HorizontalAlignment="Left" Height="428" Margin="10,10,0,0" VerticalAlignment="Top" Width="468"
+                  ItemsSource="{Binding ColumnsCountCollection}"
+                  SelectedItem="{Binding SelectedColumn}"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Общая по колонкам"
+                     ToolTip="В данной вкладке дана общая информация по списку колонок на сервере БД">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid HorizontalAlignment="Left" Height="428" Margin="10,10,0,0" VerticalAlignment="Top" Width="468"
+                 ItemsSource="{Binding Columns}" AutoGenerateColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="База данных" Binding="{Binding TABLE_CATALOG}"/>
+                            <DataGridTextColumn Header="Таблица" Binding="{Binding TABLE_NAME}"/>
+                            <DataGridTextColumn Header="Колонка" Binding="{Binding COLUMN_NAME}"/>
+                            <DataGridTextColumn Header="Тип" Binding="{Binding DATA_TYPE}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+
+                </Grid>
+            </TabItem>
+        </TabControl>
+        <Label Content="Детализация по колонке: " HorizontalAlignment="Left" Margin="515,74,0,0" VerticalAlignment="Top"/>
+        <Label Content="{Binding SelectedColumn.Name}" HorizontalAlignment="Left" Margin="673,74,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
